--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
-<title>ARENA SHOOTER | Phaser3 - ES6 - Webpack</title>
+<title>MAGIC SHOOTER | Phaser3 - ES6 - Webpack</title>
 <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="640">
